--- a/src/app/api-th/api-th.component.html
+++ b/src/app/api-th/api-th.component.html
@@ -1,9 +1,9 @@
 <div class="col-md-12 mt-5">
     <div class="container-fluid mb-4">
         <div class="card my-5">
-            <div class="card-header">
-                <div class="row mx-2">
-                    <h4>เอกสาร API</h4>
+            <h4 class="card-header">เอกสาร API</h4>
+            <div class="card-body">
+                <div class="row mx-5">
                     <div class="ml-auto">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-secondary">
@@ -15,10 +15,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="card-body">
                 <div class="offset-md-2 col-md-8">
                     <h5 class="mt-5">เกี่ยวกับ</h5><br>
                     <p>เรามี API เพื่อให้คุณสามารถใช้ visualization ของคุณบนเว็บไซต์หรือการนำเสนอ Microsoft PowerPoint</p>
