--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -1,9 +1,9 @@
 <div class="col-md-12 mt-5">
     <div class="container-fluid mb-4">
         <div class="card my-5">
-            <div class="card-header">
-                <div class="row mx-2">
-                    <h4>API documentation</h4>
+            <h4 class="card-header">API documentation</h4>
+            <div class="card-body">
+                <div class="row d-flex align-items-end mx-5">
                     <div class="ml-auto">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-secondary active">
@@ -16,12 +16,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="card-body">
                 <div class="offset-md-2 col-md-8">
-                    <h5 class="mt-5">About</h5><br>
+                    <h5 class="mt-3">About</h5><br>
                     <p>We provide an API for you to use your visualization on your website or Microsoft PowerPoint
                         presentation.</p>
                     <hr><br>
