--- a/src/app/tutorial-th/tutorial-th.component.html
+++ b/src/app/tutorial-th/tutorial-th.component.html
@@ -1,9 +1,9 @@
 <div class="col-md-12 mt-5">
     <div class="container-fluid mb-4">
         <div class="card my-5">
-            <div class="card-header">
-                <div class="row mx-2">
-                    <h4>วิธีการใช้งาน</h4>
+            <h4 class="card-header">วิธีการใช้งาน</h4>
+            <div class="card-body">
+                <div class="row d-flex align-items-end mx-5">
                     <div class="ml-auto">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-secondary">
@@ -15,12 +15,8 @@
                           </div>
                     </div>
                 </div>
-            </div>
-
-
-            <div class="card-body">
                 <div class="offset-md-2 col-md-8">
-                    <h5 class="font-body font-24 mt-5 mb-4"><strong>ภาพรวม</strong></h5>
+                    <h5 class="font-body font-24 my-3"><strong>ภาพรวม</strong></h5>
                     <ul>
                         <li><a class="text-primary" (click)="scroll(first)"><u>วิธีการใช้งานทีละขั้นตอน</u></a>
                             <ul>
