--- a/src/app/tutorial/tutorial.component.html
+++ b/src/app/tutorial/tutorial.component.html
@@ -1,7 +1,8 @@
 <div class="card my-5">
-    <div class="card-header">
-        <div class="row mx-2">
-            <h4>Tutorial</h4>
+    <h4 class="card-header">Tutorial</h4>
+
+    <div class="card-body">
+        <div class="row d-flex align-items-end mx-5">
             <div class="ml-auto">
                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                     <label class="btn btn-secondary active">
@@ -12,13 +13,9 @@
                     </label>
                 </div>
             </div>
-        </div>
     </div>
-
-
-    <div class="card-body">
         <div class="offset-md-2 col-md-8">
-            <h5 class="font-body font-24 mt-5 mb-4"><strong>Overview</strong></h5>
+            <h5 class="font-body font-24 my-3"><strong>Overview</strong></h5>
             <ul>
                 <li><a class="text-primary" (click)="scroll(first)"><u>Step-by-Step guide</u></a>
                     <ul>
