--- a/src/app/announcement/details.component.html
+++ b/src/app/announcement/details.component.html
@@ -1,7 +1,5 @@
-<div *ngIf="announcements" class="card my-5">
-    <div class="card-header">
-        <h4>{{announcement.title}}</h4>
-    </div>
+<div class="card my-5">
+    <h4 class="card-header">{{announcement.title}}</h4>
     <div class="card-body">
         <div class="col-md-8 offset-md-2 mt-5 mb-5" [innerHTML]="announcement.message">
         </div>
