--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,23 +2,27 @@
     padding-right: 1rem;
     padding-left: 1rem;
 }
+
 .navbar{
     position: fixed;
     z-index: 99;
     top: 0;
     overflow: hidden;
     width: 100%;
-    background-color: #3333;
+    /*background-color: rgba(74, 74, 74, 0.8);*/
 }
 .navbar a {
     float: left;
     display: block;
     text-align: center;
     text-decoration: none;
+    border: 1px solid transparent;
   }
   
-  .navbar a:hover {
-    background: #ddd;
-    color: black;
+  .navbar div a:hover {
+    /*background: #ddd;*/
+    /*color: black;*/
+    border-radius: .25rem;
+    border: 1px solid #ddd;
   }
   
