--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,8 +15,8 @@
                 <h4 class="card-header">Announcements</h4>
                 <div class="card-body">
                     <div class="row mx-1">
-                        <button class="btn btn-success ml-auto" *ngIf="user.role == 'designer'"
-                            routerLink="/announcement/add">+ add new announcement</button>
+                        <a class="btn btn-success ml-auto" *ngIf="user.role == 'designer'"
+                            routerLink="/announcement/add">+ add new announcement</a>
                     </div>
                     <ul *ngIf="announcements">
                         <li *ngFor="let announcement of announcements"><a
@@ -219,7 +219,7 @@
     <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'">
         <div class="col-md-8 mb-4">
             <div class="card mb-4" *ngIf="count > 0">
-                <div class="card-header">New Users</div>
+                <h4 class="card-header">New Users</h4>
                 <div class="card-body">
                     <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;">
                     </div>
