--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -65,6 +65,8 @@ mdb-carousel-item{
   width: 100vw;
   height: 100vh;
   z-index: -1;
+  top: 0;
+  position: fixed;
 }
 
 /* Add some content at the bottom of the video/page */
