--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-<video autoplay muted loop id="myVideo">
-    <source src="../../assets/image/Earth_Spin_In_Hands.mp4" type="video/mp4">
+<video autoplay muted loop id="myVideo" oncanplay="this.play()" onloadedmetadata="this.muted = true">
+    <source src="{{apiUrl}}/static/main_video_optimized.mp4" type="video/mp4">
 </video>
 
 <div class="content">
