--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -1,8 +1,6 @@
 <div class="card my-5">
-    <div class="card-header">
-        <h4 *ngIf="isAddMode">Add User</h4>
-        <h4 *ngIf="!isAddMode">Edit User</h4>
-    </div>
+    <h4 class="card-header" *ngIf="isAddMode">Add User</h4>
+    <h4 class="card-header" *ngIf="!isAddMode">Edit User</h4>
     <div class="card-body">
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="form-row">
