--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -1,9 +1,6 @@
 <div class="card my-5">
-    <div class="card-header">
-        <h4>Users</h4>
-    </div>
+    <h4 class="card-header">Users</h4>
     <div class="card-body">
-
 <div class="row px-3">
     <p class="ml-auto">total users : {{count}}</p>
 </div>
