--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -109,18 +109,18 @@
                         </div>
                     </div>
 
-                    <div *ngIf="templates && count > 0">
+                    <div class="tableFixHead" *ngIf="templates && count > 0">
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th style="width: 30%">Refid</th>
-                                    <th style="width: 30%">Template</th>
-                                    <th style="width: 30%">Status</th>
-                                    <th style="width: 10%"></th>
+                                    <th style="width: 30%;">Refid</th>
+                                    <th style="width: 30%;">Template</th>
+                                    <th style="width: 30%;">Status</th>
+                                    <th style="width: 10%;"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let item of items">
+                                <tr *ngFor="let item of items.reverse();">
                                     <td>{{item.refId}}</td>
                                     <td>{{item.template}}</td>
                                     <td>
@@ -132,7 +132,7 @@
                                             class="btn btn-sm btn-primary mr-1" *ngIf="item.status=='active'">View</a>
                                         <a class="btn btn-sm btn-secondary disabled mr-1"
                                             *ngIf="item.status=='inactive'">View</a>
-                                        <div ngbDropdown class="d-inline-block">
+                                        <div ngbDropdown class="d-inline-block float_right" placement="bottom-right">
                                             <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1"
                                                 ngbDropdownToggle>Manage</button>
                                             <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
