--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
-.tableFixHead{ 
-    overflow-y: scroll; 
+/*.tableFixHead{
+    overflow-y: auto;
     overflow-x: hidden;
-    max-height: 30vh;
+    max-height: 50vh;
     mask-image: linear-gradient(to top, transparent, black),
     linear-gradient(to left, transparent 17px, black 17px);
     mask-size: 100% 20000px;
@@ -12,14 +12,13 @@
     -webkit-mask-position: left bottom;
     transition: mask-position 0.3s, -webkit-mask-position 0.3s;
 }
-.tableFixHead:hover{ 
-    -webkit-mask-position: left top; 
+.tableFixHead:hover{
+    -webkit-mask-position: left top;
 }
 .tableFixHead thead th { position: sticky; top: 0;}
-
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px;}
-th     { background:rgb(255, 255, 255);border-top: 1px;position: relative; z-index: 9999;}
+th     { background:rgb(255, 255, 255);border-top: 1px;position: relative; z-index: 99;}
 
 ::-webkit-scrollbar-track
 {
@@ -40,3 +39,5 @@ th     { background:rgb(255, 255, 255);border-top: 1px;position: relative; z-ind
 	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0,.1);
 	background-color: rgba(85,85,85,.5);
 }
+*/
+
