--- a/src/app/tutorial/template.component.html
+++ b/src/app/tutorial/template.component.html
@@ -16,14 +16,14 @@
                         <td><strong>Example data</strong></td>
                         <td>
                             <a
-                                href="{{apiUrl}}/static/example-files/{{template.data_name}}">{{template.data}}</a><br>
+                                href="{{apiUrl}}/static/example-files/{{template.data}}">{{template.data}}</a><br>
                         </td>
                     </tr>
                     <tr>
                         <td><strong>Example config</strong></td>
                         <td>
                             <a
-                                href="{{apiUrl}}/static/example-files/{{template.config_name}}">{{template.config}}</a><br>
+                                href="{{apiUrl}}/static/example-files/{{template.config}}">{{template.config}}</a><br>
                         </td>
                     </tr>
                 </tbody>
