--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -151,7 +151,7 @@
                                                 <button class="dropdown-item"
                                                     (click)="updateActivate(item.refId,item.status)">{{item.status=='active'
                                                     ?
-                                                    'Deactive' : 'Active'}}</button>
+                                                    'Deactivate' : 'Activate'}}</button>
                                             </div>
                                         </div>
                                     </td>
