--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -36,6 +36,14 @@
                 </div>
             </div>
             <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" formControlName="email" class="form-control"
+                  [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                  <div *ngIf="f.email.errors.required">Email is required</div>
+              </div>
+          </div>
+            <div class="form-group">
                 <button [disabled]="loading" class="btn btn-dark-blue btn-rounded">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Sign Up
