--- a/src/app/users/add-edit.component.html
+++ b/src/app/users/add-edit.component.html
@@ -43,19 +43,24 @@
                     </div>
                 </div>
             </div>
-            <div class="form-row" *ngIf="!isAddMode">
+            <div class="form-row">
                 <div class="form-group col">
-
+                  <label for="email">Email</label>
+                    <input type="text" formControlName="email" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                        <div *ngIf="f.email.errors.required">Email is required</div>
+                    </div>
                 </div>
                 <div class="form-group col">
-                    Role
+                  <label for="role">Role</label>
                     <div class="input-group mb-3">
                         <select class="custom-select" id="inputGroupSelect02" formControlName="role">
                             <option selected>Edit Role</option>
                             <option value="user">user</option>
                             <option value="admin">admin</option>
                             <option value="designer">designer</option>
-                        </select>               
+                        </select>
                     </div>
                 </div>
             </div>
