--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -216,14 +216,12 @@
         </div>
     </div>
 
-    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'">
-        <div class="col-md-8 mb-4">
-            <div class="card mb-4" *ngIf="count > 0">
-                <h4 class="card-header">New Users</h4>
+    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'"#logscatter>
+            <div class="card mb-4">
+                <h4 class="card-header">Log Bar</h4>
                 <div class="card-body">
-                    <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;">
+                    <div id="chartContainer" style="height: 900px; width: 100%; margin-left:auto;margin-right:auto;">
                     </div>
-                </div>
             </div>
         </div>
     </div>
