--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -216,12 +216,10 @@
         </div>
     </div>
 
-    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'"#logscatter>
-            <div class="card mb-4">
-                <h4 class="card-header">Log Bar</h4>
-                <div class="card-body">
-                    <div id="chartContainer" style="height: 900px; width: 100%; margin-left:auto;margin-right:auto;">
-                    </div>
+    <div class="card mb-5" *ngIf="user.role == 'admin' || user.role == 'superadmin'" #logscatter>
+      <h4 class="card-header">Log Visualization</h4>
+        <div class="card-body">
+            <div id="chartContainer">
             </div>
         </div>
     </div>
