--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -13,7 +13,7 @@
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">{{template.TemplateName}}</h5>
-                                      <div class="card-text" [innerHTML]="template.description.substring(0,100)" style="height:48px; overflow-y: hidden;">
+                                      <div class="card-text" [innerHTML]="template.description" style="height:48px; overflow-y: hidden;overflow-x: hidden;">
                                       </div>
                                       <a routerLink="/tutorial/details/{{template.id}}">see details</a>
                                     <div class="row pl-3 pr-3 mt-2">
