--- a/src/app/tutorial-th/tutorial-th.component.html
+++ b/src/app/tutorial-th/tutorial-th.component.html
@@ -114,9 +114,9 @@
                                         <td><a routerLink="/tutorial/details/{{template.id}}">{{template.TemplateName}}</a></td>
                                         <td>
                                             <a
-                                                href="{{apiUrl}}/static/example-files/{{template.data}}">{{template.data}}</a><br>
+                                                href="{{apiUrl}}/static/example-files/{{template.TemplateName}}/{{template.data}}">{{template.data}}</a><br>
                                             <a
-                                                href="{{apiUrl}}/static/example-files/{{template.config}}">{{template.config}}</a>
+                                                href="{{apiUrl}}/static/example-files/{{template.TemplateName}}/{{template.config}}">{{template.config}}</a>
                                         </td>
                                     </tr>
                                 </tbody>
